...
              Stepper(currentStep = 1, isFormComplete = false)
              Spacer(modifier = Modifier.height(16.dp))

              Image(
                  painter = painterResource(id = R.drawable.sign_up_choose_profile_logo),
                  contentDescription = "Illustration",
                  modifier = Modifier.size(300.dp).testTag("roleIllustration"))

              SectionTitle(text = "Sign up as :", testTag = "signUpAsTitle")

              Spacer(modifier = Modifier.height(30.dp))

              ButtonSeekerProvider(
                  text = "Seeker",
                  description = "I want to request services.",
...
