...
            leftButtonForm = Icons.AutoMirrored.Filled.ArrowBack,
            leftButtonAction = {
              navigationActions.navigateAndSetBackStack(
                  Route.BOOKING_DETAILS, listOf(Route.REQUESTS_OVERVIEW))
            },
            testTagTitle = "bookingCalendarTitle",
            testTagLeft = "backButton",
            testTagGeneral = "bookingCalendarTopBar")
      }) { padding ->
        Box(modifier = Modifier.fillMaxSize()) {
          Column(modifier = Modifier.fillMaxSize().padding(padding)) {
            // BookingInfoCard at the top
            BookingInfoCard(
...
