...
                    actionIconContentColor = colorScheme.onBackground,
                ),
            title = {
              Text(
                  text = "Your booking",
                  modifier = Modifier.testTag("booking_title"),
                  color = colorScheme.onBackground,
                  textAlign = TextAlign.Center,
...
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
...
                        modifier =
                            Modifier.weight(1f)
                                .testTag("profile_box")
                                .fillMaxHeight()
                                .clip(RoundedCornerShape(16.dp))
...
                                .background(colorScheme.primary)
                                .padding(horizontal = 8.dp, vertical = 12.dp)
                                .testTag("price_appointment_box")) {
                          Column(
                              horizontalAlignment = Alignment.CenterHorizontally,
                              verticalArrangement = Arrangement.SpaceEvenly,
                              modifier = Modifier.fillMaxSize()) {
                                var price = "Not set"
                                request!!.agreedPrice?.let { price = String.format("%.0f CHF", it) }

...
                  fontSize = 20.sp,
                  fontWeight = FontWeight.Bold,
                  modifier = Modifier.padding(bottom = 8.dp).testTag("problem_description_label"))

              Card(
...
                          fontWeight = FontWeight.Bold,
                          color = colorScheme.onSurface,
                          modifier = Modifier.testTag("problem_description"))
                    }
                  }
...
                    fontSize = 20.sp,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.padding(bottom = 8.dp).testTag("problem_image_label"))

                Card(
...
                    ) {
                      AsyncImage(
                          modifier = Modifier.fillMaxSize().height(200.dp).testTag("problem_image"),
                          model = request!!.imageUrl,
                          placeholder = painterResource(id = R.drawable.loading),
...
                  fontSize = 20.sp,
                  fontWeight = FontWeight.Bold,
                  modifier = Modifier.padding(top = 16.dp, bottom = 8.dp).testTag("address_label"))

              val address = request!!.location
...
                          .height(200.dp) // Fixed height for the map
                          .background(colorScheme.surface, RoundedCornerShape(16.dp))
                          .testTag("google_map_container") // Test tag for UI testing
                  ) {
                    GoogleMap(
...
  Card(
      modifier =
          Modifier.testTag("provider_card").clickable {
            if (isSeeker) {
              providerViewModel.selectProvider(provider)
...
  if (isPending && isSeeker) {
    Box(
        modifier = modifier.fillMaxWidth().padding(top = 8.dp).testTag("edit_button"),
        contentAlignment = Alignment.Center) {
          Button(
...
) {
  Box(
      modifier = modifier.fillMaxWidth().padding(top = 8.dp).testTag("chat_button"),
      contentAlignment = Alignment.Center) {
        Button(
...
) {
  Row(
      modifier = Modifier.fillMaxWidth().padding(top = 16.dp).testTag("edit_discuss_button"),
      horizontalArrangement = Arrangement.spacedBy(16.dp),
      verticalAlignment = Alignment.CenterVertically,
...
                  if (isSystemInDarkTheme()) SelectedPackageDark else SelectedPackage)) {
        Column(
            modifier = Modifier.padding(20.dp).fillMaxHeight().testTag("package_content"),
            horizontalAlignment = Alignment.Start) {
              // Price of the Package
...
              // Description of the Package
              Text(
                  modifier = Modifier.testTag("description"),
                  text = packageProposal.description,
                  style = Typography.bodyMedium,
...
              // Important infos about the package
              Column(
                  modifier = Modifier.testTag("bullet_points"),
              ) {
                packageProposal.bulletPoints.forEach { feature ->
...
        isSelectingDate = true // Start with date selection
      },
      modifier = Modifier.testTag("date_time_picker_button")) {
        Icon(Icons.Default.DateRange, contentDescription = "Select date and time")
      }
...
                                    color = colorScheme.onBackground)
                              },
                              modifier = Modifier.testTag("date_picker"))
                        } else {
                          TimePicker(
                              state = timePickerState, modifier = Modifier.testTag("time_picker"))
                        }

...
                              TextButton(
                                  onClick = { showModal = false },
                                  modifier = Modifier.testTag("cancel_button")) {
                                    Text("Cancel")
                                  }
                              TextButton(
                                  modifier = Modifier.testTag("action_button"),
                                  onClick = {
                                    if (isSelectingDate) {
...
      onClick = { showDialog = true },
      colors = IconButtonDefaults.iconButtonColors(contentColor = colorScheme.onPrimary),
      modifier = Modifier.testTag("edit_price_button")) {
        Icon(Icons.Default.Edit, contentDescription = "Edit price")
      }
...
  if (showDialog) {
    AlertDialog(
        modifier = Modifier.testTag("edit_price_dialog"),
        onDismissRequest = { showDialog = false },
        title = {
          Text(
              modifier = Modifier.testTag("edit_price_title"),
              text = "Edit Price",
              style = Typography.titleMedium,
...
                singleLine = true,
                isError = (!isPriceValid && price.isNotEmpty()) || containsInvalidChars,
                modifier = Modifier.fillMaxWidth().testTag("edit_price_input"))
            // Error message for invalid format
            if (!isPriceValid && price.isNotEmpty()) {
...
        confirmButton = {
          TextButton(
              modifier = Modifier.testTag("save_button"),
              onClick = {
                val priceValue = price.toDoubleOrNull()
...
